--- a/"No Distractions" for YouTube Extension/Info.plist
+++ b/"No Distractions" for YouTube Extension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>&quot;No Distractions&quot; for YouTube</string>
+	<string>"No Distractions" for YouTube</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
