--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -3,7 +3,7 @@
     "default_locale": "en",
 
     "name": "'No Distractions' for YouTube",
-    "description": "Hides distraction on home page and when watching. Show hidden elements when you need them. Store your personal preferences.",
+    "description": "Hides distractions. Show hidden elements when you need them. Store your personal preferences.",
     "version": "3.1",
 
     "icons": {
