--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -3,8 +3,8 @@
     "default_locale": "en",
 
     "name": "'No Distractions' for YouTube",
-    "description": "Hides distractions. Show hidden elements when you need them. Store your personal preferences.",
-    "version": "3.4",
+    "description": "Hide distractions. Show hidden elements when you need them. Store your personal preferences.",
+    "version": "3.5.1",
 
     "icons": {
         "48": "images/new-icon48.png",
