more robust implementation of custom element hiding that stays within the simpler original framework

--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -17,7 +17,8 @@
     "content_scripts": [{
         "css": [ "style.css" ],
         "js": [ "content.js" ],
-        "matches": [ "*://www.youtube.com/*", "*://m.youtube.com/*" ]
+        "matches": [ "*://www.youtube.com/*", "*://m.youtube.com/*" ],
+        "run_at": "document_end"
     }],
 
     "browser_action": {
